--- a/project6_part4.rmd
+++ b/project6_part4.rmd
@@ -182,10 +182,15 @@ n <- sample(1:length(covars), iters, replace = TRUE)
 covar_sample <- sapply(n, function(x) sample(covars, size = x))
 
 
-#store results
+#store results as a matrix (converting to data frame kept crashing my computer :/)
+# first column is att
+# second is p-value
+# third is balance proportion
+# fourth is percent improvement
+
 results <- t(mapply(function(x,y) 
     list(
-      # grabs lm parameters
+      # grabs lm parameters using hero's code (i love it!! so brilliant)
       summary(lm(as.formula(paste('student_ppnscal ~ college +', paste(x, collapse='+'))), 
                   data = match.data(y), weights = weights))$coefficients["college", "Estimate"],
       
@@ -208,7 +213,7 @@ results <- t(mapply(function(x,y)
     ), 
     
     
-    #data x
+    #data x referred to above
     
     covar_sample, 
     
@@ -219,61 +224,15 @@ results <- t(mapply(function(x,y)
                          estimand = "ATT", replace = TRUE, ratio = 3)))
 ))
 
-saveRDS(results, "part4_ps_simulation_results_10000.rds")
+results <- cbind(results, n)
+colnames(results) <- c("att", "pvalue", "sharebal", "pctimprov", "ncovars")
 
-
-## old code
-
-'''test <- sapply(lapply(covar_sample, function(x){
- suppressWarnings(matchit(formula = as.formula(paste('college ~', paste(x, collapse='+'))),
-                         data = d, method = "nearest", distance = "glm", link = "logit", 
-                         estimand = "ATT", replace = TRUE, ratio = 3))
-}), FUN = testfuns)
-
-
-
-
-
-#run match it 
-suppressWarnings(match_model <- lapply(covar_sample, function(x)
-  matchit(formula = as.formula(paste('college ~', paste(x, collapse='+'))),
-                         data = d, method = "nearest", distance = "glm", link = "logit", 
-                         estimand = "ATT", replace = TRUE, ratio = 3)
-  ))
-
-   saveRDS(match_model, "part4_ps_simulation_matchmodels.rds")
-
-#calculate ATT 
-  #match_data <- lapply(match_model, FUN = match.data)
-  
-  lm_model <- mapply(function(x,y) 
-    lm(as.formula(paste('student_ppnscal ~ college +', paste(x, collapse='+'))), 
-                  data = match.data(y), weights = weights), 
-    covar_sample, 
-    match_model, 
-    SIMPLIFY = FALSE
-    )
-  
-
-# grabs ATT and p-value
-  ests <- sapply(lm_model, function(x) summary(x)$coefficients["college", ])
-
-
-# proportion of covariates that meet the standardized mean difference <= 0.1
-share_bal <- sapply(match_model, function(x) bal.tab(x, thresholds = 0.1)$Balance %>%
-    transmute(balanced = 1*(M.Threshold == "Balanced, <0.1")) %>%
-    unlist() %>%
-    mean())
-
- # mean percent improvement in the standardized mean difference
- pct_improv <- sapply(match_model, function(x) summary(x)$reduction[,1] %>% mean())
- 
-''' 
-
-
-
+# save results
+# saveRDS(results, "part4_ps_simulation_results_10000.rds")
 
 ```
+
+
 
 ```{r}
 
@@ -412,7 +371,7 @@ The next plot shows the mean percentage increase in the balance of the covariate
   ggplot() +
   geom_point(aes(x = unlist(results[,4]), y = unlist(results[,1]))) +
   theme_bw() +
-  labs(title = "ATT again Mean Percent Improvement",
+  labs(title = "ATT against Mean Percent Improvement",
        subtitle = "'True' model shown in red") +
   xlab("Percent") +
   ylab("Average Treatment on the Treated") +
@@ -429,7 +388,7 @@ Finally, we show the number of covariates against the ATT. This plot does sugges
   ggplot() +
   geom_point(aes(y = unlist(results[,1]), x = n)) +
   theme_bw() +
-  labs(title = "ATT again Number of Covariates",
+  labs(title = "ATT against Number of Covariates",
        subtitle = "'True' model shown in red") +
   xlab("Number") +
   ylab("Average Treatment on the Treated") +
